<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@id/lbl_nom_medecin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_du_medecin"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/valNomMed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=" "
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/lbl_pre_medecin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prenom_du_medecin"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/valpreMed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=" "
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/lbl_spc_medecin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spec_du_medecin"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/valspecMed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=" "
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/lbl_ville_medecin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ville_du_medecin"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/valvilleMed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=" "
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/lbl_desc_medecin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_margin="5dp"/>

            <TextView
                android:id="@+id/valdescMed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=" "
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>